# rust-audio

./: .gitignore
rust-vst/basic/: Cargo.toml
rust-vst/basic-vst/: Cargo.toml
rust-vst/basic-vst/Plugin.vst/Contents/: Info.plist
rust-vst/basic-vst/Plugin.vst/Contents/MacOS/: Plugin
rust-vst/basic-vst/src/: lib.rs
rust-vst/basic/src/: lib.rs
rust-vst/vst-rs-master/: Cargo.toml  README.md  osx_vst_bundler.sh
rust-vst/vst-rs-master/Plugin.vst/Contents/: Info.plist
rust-vst/vst-rs-master/examples/: redux_effect.rs
rust-wasm-webpack/: package-lock.json
rust-wasm-webpack/src/: lib.rs
web-audio/: Cargo.toml  index.html  index.js  readme.md  script.js
web-audio/assets/: teleport.aif
web-audio/hello-wasm/: Cargo.toml  LICENSE_MIT
web-audio/hello-wasm/src/: lib.rs
web-audio/src/: lib.rs
write-sine/: Cargo.toml  readme.md
write-sine/src/: main.rs
