[package]
name = "basic_vst"
version = "0.0.1"
authors = ["Author <author@example.com>"]

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
log = "0.4"
num-traits = "0.2"
libc = "0.2"
bitflags = "1"
libloading = "0.5"

[dev-dependencies]
time = "0.1"
rand = "0.7"

[lib]
name = "basicvst"
crate-type = ["cdylib"]


